Add layout structure and styling for header and card components

--- a/index.html
+++ b/index.html
@@ -5,10 +5,114 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS Photo Blog</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Edu+TAS+Beginner:wght@400..700&family=Sometype+Mono:ital,wght@0,400..700;1,400..700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body>
+
+    <!-- Header -->
+    <header class="main-header d-flex">
+        <h1>ESTATE '24</h1>
+    </header>
+
+    <main>
+        <div class="container">
+            <div class="row d-flex">
+                <div class="col-lg-4">
+                    <div class="card d-flex">
+                        <div class="card-pin">
+                            <img src="./assets/img/pin.svg" alt="">
+                        </div>
+                        <div class="card-image">
+                            <img src="https://static.vecteezy.com/ti/photos-gratuite/p1/29360891-une-petit-vert-lezard-seance-sur-haut-de-une-arbre-bifurquer-generatif-ai-gratuit-photo.jpg"
+                                alt="">
+                        </div>
+                        <div class="card-description">
+                            <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, in!</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="card d-flex">
+                        <div class="card-pin">
+                            <img src="./assets/img/pin.svg" alt="">
+                        </div>
+                        <div class="card-image">
+                            <img src="https://static.vecteezy.com/ti/photos-gratuite/p1/29360891-une-petit-vert-lezard-seance-sur-haut-de-une-arbre-bifurquer-generatif-ai-gratuit-photo.jpg"
+                                alt="">
+                        </div>
+                        <div class="card-description">
+                            <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, in!</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="card d-flex">
+                        <div class="card-pin">
+                            <img src="./assets/img/pin.svg" alt="">
+                        </div>
+                        <div class="card-image">
+                            <img src="https://static.vecteezy.com/ti/photos-gratuite/p1/29360891-une-petit-vert-lezard-seance-sur-haut-de-une-arbre-bifurquer-generatif-ai-gratuit-photo.jpg"
+                                alt="">
+                        </div>
+                        <div class="card-description">
+                            <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, in!</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="card d-flex">
+                        <div class="card-pin">
+                            <img src="./assets/img/pin.svg" alt="">
+                        </div>
+                        <div class="card-image">
+                            <img src="https://static.vecteezy.com/ti/photos-gratuite/p1/29360891-une-petit-vert-lezard-seance-sur-haut-de-une-arbre-bifurquer-generatif-ai-gratuit-photo.jpg"
+                                alt="">
+                        </div>
+                        <div class="card-description">
+                            <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, in!</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="card d-flex">
+                        <div class="card-pin">
+                            <img src="./assets/img/pin.svg" alt="">
+                        </div>
+                        <div class="card-image">
+                            <img src="https://static.vecteezy.com/ti/photos-gratuite/p1/29360891-une-petit-vert-lezard-seance-sur-haut-de-une-arbre-bifurquer-generatif-ai-gratuit-photo.jpg"
+                                alt="">
+                        </div>
+                        <div class="card-description">
+                            <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, in!</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="card d-flex">
+                        <div class="card-pin">
+                            <img src="./assets/img/pin.svg" alt="">
+                        </div>
+                        <div class="card-image">
+                            <img src="https://static.vecteezy.com/ti/photos-gratuite/p1/29360891-une-petit-vert-lezard-seance-sur-haut-de-une-arbre-bifurquer-generatif-ai-gratuit-photo.jpg"
+                                alt="">
+                        </div>
+                        <div class="card-description">
+                            <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, in!</span>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+
+    </main>
 
     <script src="./assets/js/main.js"></script>
 </body>
