--- a/index.html
+++ b/index.html
@@ -20,92 +20,10 @@
         <h1>ESTATE '24</h1>
     </header>
 
+    <!-- Main Content -->
     <main>
         <div class="container">
             <div class="row d-flex">
-                <!-- <div class="col-lg-4">
-                    <div id="card" class="card d-flex">
-                        <div class="card-pin">
-                            <img src="./assets/img/pin.svg" alt="">
-                        </div>
-                        <div class="card-image">
-                            <img id="card-image" src="" alt="">
-                        </div>
-                        <div class="card-description">
-                            <span id="card-description"></span>
-                        </div>
-                    </div>
-                </div> -->
-                <!-- <div class="col-lg-4">
-                    <div class="card d-flex">
-                        <div class="card-pin">
-                            <img src="./assets/img/pin.svg" alt="">
-                        </div>
-                        <div class="card-image">
-                            <img src="https://static.vecteezy.com/ti/photos-gratuite/p1/29360891-une-petit-vert-lezard-seance-sur-haut-de-une-arbre-bifurquer-generatif-ai-gratuit-photo.jpg"
-                                alt="">
-                        </div>
-                        <div class="card-description">
-                            <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, in!</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="card d-flex">
-                        <div class="card-pin">
-                            <img src="./assets/img/pin.svg" alt="">
-                        </div>
-                        <div class="card-image">
-                            <img src="https://static.vecteezy.com/ti/photos-gratuite/p1/29360891-une-petit-vert-lezard-seance-sur-haut-de-une-arbre-bifurquer-generatif-ai-gratuit-photo.jpg"
-                                alt="">
-                        </div>
-                        <div class="card-description">
-                            <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, in!</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="card d-flex">
-                        <div class="card-pin">
-                            <img src="./assets/img/pin.svg" alt="">
-                        </div>
-                        <div class="card-image">
-                            <img src="https://static.vecteezy.com/ti/photos-gratuite/p1/29360891-une-petit-vert-lezard-seance-sur-haut-de-une-arbre-bifurquer-generatif-ai-gratuit-photo.jpg"
-                                alt="">
-                        </div>
-                        <div class="card-description">
-                            <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, in!</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="card d-flex">
-                        <div class="card-pin">
-                            <img src="./assets/img/pin.svg" alt="">
-                        </div>
-                        <div class="card-image">
-                            <img src="https://static.vecteezy.com/ti/photos-gratuite/p1/29360891-une-petit-vert-lezard-seance-sur-haut-de-une-arbre-bifurquer-generatif-ai-gratuit-photo.jpg"
-                                alt="">
-                        </div>
-                        <div class="card-description">
-                            <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, in!</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="card d-flex">
-                        <div class="card-pin">
-                            <img src="./assets/img/pin.svg" alt="">
-                        </div>
-                        <div class="card-image">
-                            <img src="https://static.vecteezy.com/ti/photos-gratuite/p1/29360891-une-petit-vert-lezard-seance-sur-haut-de-une-arbre-bifurquer-generatif-ai-gratuit-photo.jpg"
-                                alt="">
-                        </div>
-                        <div class="card-description">
-                            <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, in!</span>
-                        </div>
-                    </div>
-                </div> -->
 
             </div>
         </div>
