--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>JS Photo Blog</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link
         href="https://fonts.googleapis.com/css2?family=Edu+TAS+Beginner:wght@400..700&family=Sometype+Mono:ital,wght@0,400..700;1,400..700&display=swap"
         rel="stylesheet">
@@ -14,6 +17,11 @@
 </head>
 
 <body>
+
+    <div id="modal" class="modal d-none">
+        <div class="modal-image"></div>
+        <i class="fa-solid fa-xmark"></i>
+    </div>
 
     <!-- Header -->
     <header class="main-header d-flex">
@@ -27,8 +35,6 @@
 
             </div>
         </div>
-
-
     </main>
 
     <script src="./assets/js/main.js"></script>
