Add close icon functionality to modal and update HTML structure

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <div id="modal" class="modal d-none">
         <div class="modal-image"></div>
-        <i class="fa-solid fa-xmark"></i>
+        <i id="closeIcon" class="fa-solid fa-xmark"></i>
     </div>
 
     <!-- Header -->
