Refactor modal structure and styles for improved layout and responsiveness

--- a/index.html
+++ b/index.html
@@ -19,8 +19,11 @@
 <body>
 
     <div id="modal" class="modal d-none">
-        <div class="modal-image"></div>
-        <i id="closeIcon" class="fa-solid fa-xmark"></i>
+        <div>
+            <i id="closeIcon" class="fa-solid fa-xmark"></i>
+            <div class="modal-image">
+            </div>
+        </div>
     </div>
 
     <!-- Header -->
