Enhance modal display with image details and update HTML structure

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 
     <div id="modal" class="modal d-none">
-        <div>
+        <div class="modal-content">
             <i id="closeIcon" class="fa-solid fa-xmark"></i>
             <div class="modal-image">
             </div>
