Enhance modal functionality with navigation controls for image browsing

--- a/index.html
+++ b/index.html
@@ -19,10 +19,16 @@
 <body>
 
     <div id="modal" class="modal d-none">
+        <div class="backward">
+            <i class="fa-solid fa-chevron-left"></i>
+        </div>
         <div class="modal-content">
             <i id="closeIcon" class="fa-solid fa-xmark"></i>
             <div class="modal-image">
             </div>
+        </div>
+        <div class="forward">
+            <i class="fa-solid fa-chevron-right"></i>
         </div>
     </div>
 
