--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
 <body>
 
+    <!-- Modal -->
     <div id="modal" class="modal d-none">
         <div class="backward">
             <i class="fa-solid fa-chevron-left"></i>
